web-infras/parser/tests/fixtures/esprima/es2017/async/methods/invalid-async-function-declaration-duplicate-params/output.txt
[SyntaxError]: duplicate params (1,23)
1|o = { async *g(x = 1, x) { } }
 |                     ^
